# VibeNES

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VibeNES.code-workspace  debug_timing.cpp  debug_vblank.cpp  vcpkg.json
.copilot/: instructions.md
.github/: copilot-instructions.md
build_scripts/: compile_debug.ps1  compile_release.ps1  compile_tests.ps1
docs/: apu_implementation_guide.md  architecture.md  cpu_gui_development_plan.md  mapper_notes.md  ppu_implementation_guide.md  timing_notes.md
include/apu/: apu.hpp  apu_stub.hpp
include/audio/: audio_backend.hpp  sample_rate_converter.hpp
include/cartridge/: cartridge.hpp  cartridge_stub.hpp  mapper_factory.hpp  rom_loader.hpp
include/cartridge/mappers/: mapper.hpp  mapper_000.hpp  mapper_001.hpp  mapper_002.hpp  mapper_003.hpp  mapper_004.hpp
include/core/: bus.hpp  component.hpp  types.hpp  user_paths.hpp
include/cpu/: cpu_6502.hpp  interrupts.hpp
include/gui/: crt_filter.hpp  emulator_gui.hpp  gui_application.hpp  memory_viewer.hpp  ppu_viewer.hpp
include/gui/panels/: audio_panel.hpp  cpu_state_panel.hpp  disassembler_panel.hpp  memory_viewer_panel.hpp  ppu_viewer_panel.hpp  rom_loader_panel.hpp  timing_panel.hpp
include/gui/style/: retro_theme.hpp
include/input/: controller.hpp  controller_stub.hpp  gamepad_manager.hpp
include/memory/: ram.hpp
include/ppu/: nes_palette.hpp  ppu.hpp  ppu_memory.hpp  ppu_registers.hpp  ppu_stub.hpp
include/system/: battery_save.hpp  save_state.hpp
src/: main.cpp
src/apu/: apu.cpp
src/audio/: audio_backend.cpp  sample_rate_converter.cpp
src/cartridge/: cartridge.cpp  mapper_factory.cpp  rom_loader.cpp
src/cartridge/mappers/: mapper_000.cpp  mapper_001.cpp  mapper_002.cpp  mapper_003.cpp  mapper_004.cpp
src/core/: bus.cpp
src/cpu/: cpu_6502.cpp
src/gui/: crt_filter.cpp  gui_application.cpp
src/gui/panels/: audio_panel.cpp  cpu_state_panel.cpp  disassembler_panel.cpp  memory_viewer_panel.cpp  ppu_viewer_panel.cpp  rom_loader_panel.cpp  timing_panel.cpp
src/gui/style/: retro_theme.cpp
src/input/: controller.cpp  gamepad_manager.cpp
src/ppu/: nes_palette.cpp  ppu.cpp  ppu_memory.cpp
src/system/: battery_save.cpp  save_state.cpp
tests/: test_main.cpp
tests/apu/: test_apu.cpp
tests/cartridge/: test_mappers.cpp  test_rom_loader.cpp  test_save_state.cpp
tests/core/: test_bus.cpp  test_types.cpp
tests/cpu/: interrupt_tests.cpp  test_cpu_6502.cpp  undocumented_opcodes_tests.cpp
tests/memory/: test_ram.cpp
tests/ppu/: address_corruption_tests.cpp  bus_conflict_tests.cpp  hardware_quirks_tests.cpp  memory_mapping_tests.cpp  oam_dma_tests.cpp  palette_tests.cpp  pattern_table_tests.cpp  ppu_trace_harness.cpp  ppu_trace_harness.hpp  ppu_trace_harness_tests.cpp  rendering_pipeline_tests.cpp  scrolling_tests.cpp  smb_scrolling_test.cpp  sprite_8x16_vertical_flip_tests.cpp  sprite_priority_transparency_tests.cpp  sprite_tests.cpp  test_chr_data.hpp  test_ppu_2c02.cpp  test_ppu_main.cpp  timing_tests.cpp  viewport_scrolling_tests.cpp  vram_address_tests.cpp
triplets/: x64-windows.cmake
